--- a/public/css/bootstrap/bootstrap.css
+++ b/public/css/bootstrap/bootstrap.css
@@ -3790,7 +3790,8 @@ input[type="button"].btn-block {
 .alert-danger {
   color: #721c24;
   background-color: #f8d7da;
-  border-color: #f5c6cb; }
+  border-color: #f5c6cb; 
+}
   .alert-danger hr {
     border-top-color: #f1b0b7; }
   .alert-danger .alert-link {
