--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -19243,7 +19243,7 @@ fieldset[disabled] .btn {
   z-index: 999999; }
 
 #loading-center {
-  background: url(../images/loader.gif) no-repeat scroll center center;
+  /* background: url("../images/logo.png") no-repeat scroll center center; */
   background-size: 20%;
   width: 100%;
   height: 100%;
@@ -20515,7 +20515,7 @@ fieldset[disabled] .btn {
   z-index: 999999; }
 
 #loading-center {
-  background: url(../images/loader.gif) no-repeat scroll center center;
+  background: url(../images/logo.png) no-repeat scroll center center;
   background-size: 20%;
   width: 100%;
   height: 100%;
